--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script src="LinkedList.js" type="module"></script>
     <script src="./Queue.js" type="module"></script>
     <script src="./utils/comperator.js" type="module"></script>
     <script src="./Stack.js" type="module"></script>
-
-
-
-</body>
-
+    <script src="./Heap/Heap.js" type="module"></script>
+    <script src="./Heap/MaxHeap.js" type="module"></script>
+    <script src="./Trie/Trie.js" type="module"></script>
+    <script src="./Tree/binary-search-tree/index.js" type="module"></script>
+    <script src="./Tree/avl-tree/index.js" type="module"></script>
+  </body>
 </html>
