AVL tree data structure rotations

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="./Trie/Trie.js" type="module"></script>
     <script src="./Tree/binary-search-tree/index.js" type="module"></script>
     <script src="./Tree/avl-tree/index.js" type="module"></script>
+    <script src="./Tree/red-black-tree/index.js" type="module"></script>
   </body>
 </html>
