--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
     <script src="./Trie/Trie.js" type="module"></script>
     <script src="./Tree/binary-search-tree/index.js" type="module"></script>
     <script src="./Tree/avl-tree/index.js" type="module"></script>
-    <script src="./Tree/red-black-tree/index.js" type="module"></script>
+    <script
+      src="./Tree/red-black-tree/external-source/index.js"
+      type="module"
+    ></script>
+    <script
+      src="./Tree/red-black-tree/my-source/red-black-tree-node.js"
+      type="module"
+    ></script>
+
+    <script
+      src="./Tree/red-black-tree/my-source/red-black-tree.js"
+      type="module"
+    ></script>
+
+    <script src="./Tree/segment-tree/index.js" type="module"></script>
   </body>
 </html>
