--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
     ></script>
 
     <script src="./Tree/segment-tree/index.js" type="module"></script>
+
+    <script src="./Graph/directional/index.js" type="module"></script>
+    <script src="./Graph/undirectional/index.js" type="module"></script>
   </body>
 </html>
