Bloom filter and Graphs

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 
     <script src="./Graph/directional/index.js" type="module"></script>
     <script src="./Graph/undirectional/index.js" type="module"></script>
+    <script src="/bloom-filter.js" type="module"></script>
   </body>
 </html>
